objects/SBQQ__Dimension__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceDimensionHelp</customHelpPage>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <description>Controls whether cost for this product may be modified on individual quotes.</description>
        <inlineHelpText>Controls whether cost for this product may be modified on individual quotes.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <description>Specify the starting quantity of the product when added.</description>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule for use with this dimension</description>
        <inlineHelpText>Discount schedule for use with this dimension</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>Dimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <description>Marks this dimension as not discountable.</description>
        <inlineHelpText>Marks this dimension as not discountable.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__NonPartnerDiscountable__c</fullName>
        <description>Marks this dimension as non-discountable for partners.</description>
        <inlineHelpText>Marks this dimension as non-discountable for partners.</inlineHelpText>
        <label>Non Partner Discountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates this dimension to a particular Price Book</description>
        <inlineHelpText>Associates this dimension to a particular Price Book</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>Price_Dimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <description>Indicates this dimension allows for price to be freely editable when building a quote.</description>
        <inlineHelpText>Indicates this dimension allows for price to be freely editable when building a quote.</inlineHelpText>
        <label>Price Editable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product to which this Price Dimension is associated.</description>
        <inlineHelpText>Select a Product to associate this Price Dimension with.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>Dimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <description>Flag that determines whether the quantity is editable.</description>
        <inlineHelpText>Allow or prevent changing the quantity for this dimension.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Quantity Scale</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a schedule for discounts based on Subscription Term. Values entered into these fields will override the values entered at the Product level.</description>
        <inlineHelpText>This is a schedule for discounts based on Subscription Term. Values entered into these fields will override the values entered at the Product level.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Price Dimensions (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermDiscountedDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>For multi-dimensional products, the type of Price Dimension: One-Time or Yearly. Yearly Dimensions are always treated as Subscriptions.</description>
        <inlineHelpText>Select the type of Price Dimension: One-Time or Yearly. Yearly Dimensions are always treated as Subscriptions.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                    <default>true</default>
                    <label>Year</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UnitPrice__c</fullName>
        <description>Unit price for this Dimension. This will override the value from the Price Book.</description>
        <inlineHelpText>Unit price for this Dimension. This will override the value from the Price Book.</inlineHelpText>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Price Dimension</label>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Cannot_Create_PriceDimension_Evergreen</fullName>
        <active>true</active>
        <description>Cannot create price dimension for evergreen or renewable/evergreen subscription type</description>
        <errorConditionFormula>OR(ISPICKVAL( SBQQ__Product__r.SBQQ__SubscriptionType__c , &apos;Evergreen&apos;),  ISPICKVAL( SBQQ__Product__r.SBQQ__SubscriptionType__c , &apos;Renewable/Evergreen&apos;))</errorConditionFormula>
        <errorMessage>Can’t create MDQ price dimensions for evergreen or renewable/evergreen products.</errorMessage>
    </validationRules>
</CustomObject>